Further edits to JSS draft.

--- a/vignettes/jss_sensemakr.Rmd
+++ b/vignettes/jss_sensemakr.Rmd
@@ -645,7 +645,7 @@ stargazer::stargazer(model.ydx, model.ydxz,
 
 ### Formal benchmarks
 
-Let us suppose the investigator *correctly* knows that: (i) $Z$ and $X$ have the same strength of association with $D$ and $Y$; and, (ii) $Z$ is independent of $X$. How can she leverage this information to undersand how much bias a confounder $Z$ "not unlike" $X$ could cause?As we have seen in Section XXX, it is possible to use the observed partial $R^2$ of $X$ with $D$ and $Y$ with Equation \ref{eq:bounds} to obtain valid bounds on the amount of confounding caused by an unobserved $Z$ as strongly associated with the treatment and with the outcome as $X$.  
+Let us suppose the investigator *correctly* knows that: (i) $Z$ and $X$ have the same strength of association with $D$ and $Y$; and, (ii) $Z$ is independent of $X$. How can she leverage this information to undersand how much bias a confounder $Z$ "not unlike" $X$ could cause? As we have seen in Section XXX, it is possible to use the observed partial $R^2$ of $X$ with $D$ and $Y$ with Equation \ref{eq:bounds} to obtain valid bounds on the amount of confounding caused by an unobserved $Z$ as strongly associated with the treatment and with the outcome as $X$.  
 
 In `sensemakr`, this can be done with the function `ovb_bounds()`. In this function one needs to specify the linear model being used (`model = model.ydx`), the treatment of interest (`treatment = "D"`), the observed variable used for benchmarking (`benchmark_covariates = "X"`), and how many times stronger $Z$ is in explaining treatment (`kd = 1`) and outcome (`ky = 1`) variation, as compared to the benchmark variable $X$.
 
@@ -673,10 +673,10 @@ As we can see, the results of the bounding procedure shows us that, an unobserve
 
 ### Informal benchmarks
 
-This section demonstrates an ``informal benchmark'' to show its dangers. Computing the bias due to the omission of $Z$ requires two sensitivity parameters: its partial $R^2$ with the treatment $D$ and its partial $R^2$ with the outcome $Y$.  Informal approaches follow from the intuition that, rather than work with Equation \ref{eq:bounds}, we can simply take the observed partial $R^2$ of $X$ with $D$ and $Y$ found directly from regressions for the treatment and outcome, repsectively. Unfortunately, as formalized in \cite{cinelli:jrssb2019}, these observed associations are themselves biased, making comparisons using them potentially misleading. <!-- from those regressions, as plausible values for the sensitivity parameters. Such is the rationale is the essence of many informal benchmarking proposals. However, 
-But what can happen if one uses this informal approximation insted of the formal bounds?!--> What happens if we nevertheless attempt to use those observed statistics for benchmarking?  
+This section demonstrates an ``informal benchmark'' to show its dangers. Computing the bias due to the omission of $Z$ requires two sensitivity parameters: its partial $R^2$ with the treatment $D$ and its partial $R^2$ with the outcome $Y$.  Informal approaches follow from the intuition that we can simply take the observed partial $R^2$ of $X$ with $D$ and $Y$ found directly from regressions for the treatment and outcome, respectively. Unfortunately, as formalized in \cite{cinelli:jrssb2019}, these observed associations are themselves biased, making comparisons using them potentially misleading. The relationships in Equation \ref{eq:bounds} allow us, however, to move from the observed associations in those regressions to the bounds on the partial $R^2$ values of interest.<!-- from those regressions, as plausible values for the sensitivity parameters. Such is the rationale is the essence of many informal benchmarking proposals. However, 
+But what can happen if one uses this informal approximation insted of the formal bounds?!--> 
 
-To compute the informal benchmarks, we first need to obtain the observed partial $R^2$ of $X$ with $Y$. This can be done using the `partial_r2()` function of `sensemakr` in the `model.ydx` regression.
+What happens if we nevertheless attempt to use those observed statistics for benchmarking? To compute the informal benchmarks, we first need to obtain the observed partial $R^2$ of $X$ with $Y$. This can be done using the `partial_r2()` function of `sensemakr` in the `model.ydx` regression.
 
 ```{r partial_r2_y}
 r2yx.d <- partial_r2(model.ydx, covariates = "X")
@@ -699,7 +699,7 @@ informal_adjusted_estimate <- adjusted_estimate(model     = model.ydx,
                                                 r2yz.dx   = r2yx.d)
 ```
 
-Let us now comapre the informal benchmarks with the previous formal bounds. First one should plot the sensitivity contours with the function `ovb_contour_plot()`. Next, we add the informal benchmark to the contours, using the numeric method of the function `add_bound_to_contour()`. Finally, the formal bounds previously computed are added. When needed, users can customize the position of the bound label in the plot with the arguments `label.bump.x` and `label.bump.y`. <!--Several other graphical customizations are available.!-->
+Let us now compare those informal benchmarks with the formal bounds describes above. To prepare, we first plot sensitivity contours with the function `ovb_contour_plot()`. Next, add the informal benchmark to the contours, using the numeric method of the function `add_bound_to_contour()`. Finally, we can add the formal bounds computed above. <!-- When needed, users can customize the position of the bound label in the plot with the arguments `label.bump.x` and `label.bump.y`. <!--Several other graphical customizations are available.!-->
 
 ```{r fig_cap_naive, echo=FALSE}
 fig.cap.naive <- fig.cap <- "\\label{fig:naive_benchmarking}Informal benchmarking \\emph{versus} proper bounds."
@@ -722,11 +722,11 @@ add_bound_to_contour(bounds = formal_bound,
                      bound_label = "Formal bound")
 ```
 
-Note the results of the informal benchmark are very different from what one expects. The informal benchmark point is still far away from zero, and this would lead an investigator to incorrectly conclude that an unobserved confounder $Z$ "not unlike $X$" is not sufficient to explain away the observed effect, when in fact it would. Moreover, this incorrect conclusion occurs despite the investigator *correctly* assuming both that: (i) $Z$ and $X$ have the same strength of association with $D$ and $Y$; and, (ii) $Z$ is independent of $X$. 
+Note the results from informal benchmarking are misleading here: even though $Z$ and $X$ are exactly alike in their roles,  the informal benchmark point is still far from zero, which would suggest that an unobserved confounder $Z$ "not unlike $X$" is unable to explain away the observed effect, when in fact we know it would explain it away in this example. This incorrect conclusion occurs despite the investigator *correctly* assuming both that: (i) $Z$ and $X$ have the same strength of association with $D$ and $Y$; and, (ii) $Z$ is independent of $X$. For further details and discussion, we point readers to Sections 4.4 and 6.1 of @cinelli:jrssb2019.
 
-<!-- CJH: I considered an approach in which the "explanation" is much more cursory and comes earlier in this section as motivation, for fear that this longer explanation is unnecessary to a software paper.  But happy to discuss. 
+<!-- CJH: I think this explanation is great and would be perfect in a vignette, but it comes across as much more explainy than what we've been doing throughout the rest of this, and I'd lean towards keeping it out of the software paper. I've instead given a very broad suggestion at the top of this section as to why you can't use the raw observed associations. I've also takent the final sentence below, pointing readers to the paper for further details and discussion, and put it above.
 
-Why does this happen? As explained in Section 6.1 of @cinelli:jrssb2019, there are two problems affecting informal benchmarks in this setting. First, we have to make an adjustment of baseline variance to be explained, since the sensitivity parameters consider the partial $R^2$ of $Z$ with the outcome, after taking into account what is already explained by $X$. Second, consider the DAG of our structural model, as shown in Figure \ref{fig:dag_naive}. Note that, although $Z$ is *marginally* independent of $X$, note that $Z$ is not *conditionally* independent of $X$, *given* $D$, because $D$ is a *collider* (Pearl, 2009). Conditioning on $D$, thus, creates an association between $Z$ and $X$, and this distorts the observed quantities of $X$ that are being used for benchmarking. Finally, note that using the formal bounds leads the researcher to the correct conclusion: an unobserved confounder $Z$ similar to $X$ is strong enough to explain away all the observed association. Given these considerations, we do not recomment using informal benchmarks for sensitivity analysis, and suggest empirical researchers to use formal approaches such as the ones provided with `ovb_bounds()`.  For further details and discussion, we point readers to Sections 4.4 and 6.1 of @cinelli:jrssb2019.
+Why does this happen? As explained in Section 6.1 of @cinelli:jrssb2019, there are two problems affecting informal benchmarks in this setting. First, we have to make an adjustment of baseline variance to be explained, since the sensitivity parameters consider the partial $R^2$ of $Z$ with the outcome, after taking into account what is already explained by $X$. Second, consider the DAG of our structural model, as shown in Figure \ref{fig:dag_naive}. Note that, although $Z$ is *marginally* independent of $X$, note that $Z$ is not *conditionally* independent of $X$, *given* $D$, because $D$ is a *collider* (Pearl, 2009). Conditioning on $D$, thus, creates an association between $Z$ and $X$, and this distorts the observed quantities of $X$ that are being used for benchmarking. Finally, note that using the formal bounds leads the researcher to the correct conclusion: an unobserved confounder $Z$ similar to $X$ is strong enough to explain away all the observed association. Given these considerations, we do not recommend using informal benchmarks for sensitivity analysis, and suggest empirical researchers to use formal approaches such as the ones provided with `ovb_bounds()`.  For further details and discussion, we point readers to Sections 4.4 and 6.1 of @cinelli:jrssb2019.
 
 \begin{figure}
 \centering
@@ -742,19 +742,19 @@ We conclude this section by demonstrating how summary regression output can be u
 
 ### Sensitivity statistics
 
-The robustness value and partial $R^2$ are key sensitivity statistics, useful for standard reporting and with direct interpretations. These can be computed directly by the user with the functions <!-- If the user wants to just compute those, instead of using `sensemakr()`, it may be simpler to use the individual functions for each of the sensitivity statistics, namely,!-->\code{robustness_value()} and \code{partial_r2()}. These functions have both \code{lm} and \code{numeric} numeric methods so that users may pass in an ``lm` object or call them using numerical values based from elsewhere. With a fitted \code{lm} model in hand, the most convenient way to compute the RV and partial $R^2$ is by
+The robustness value and partial $R^2$ are key sensitivity statistics, useful for standard reporting and with direct interpretations. These can be computed directly by the user with the functions <!-- If the user wants to just compute those, instead of using `sensemakr()`, it may be simpler to use the individual functions for each of the sensitivity statistics, namely,!-->\code{robustness_value()} and \code{partial_r2()}. <!-- These functions have both \code{lm} and \code{numeric} numeric methods so that users may pass in an ``lm` object or call them using numerical values based from elsewhere.!--> With a fitted \code{lm} model in hand, the most convenient way to compute the RV and partial $R^2$ is by employing the \code{lm} methods for these functions, as in
 ```{r rv_lm, results='hide'}
 robustness_value(model = darfur.model, covariates = "directlyharmed")
 partial_r2(model = darfur.model, covariates = "directlyharmed")
 ```
 
-\noindent However, when one does not have access to the data in order to run this model, simple summary statistiscs such as the point estimate for the `directlyharmed`  (0.097), its standard error (`0.023`) and the degress of freedom of the regression (`783`) are sufficient to compute the RV and partial $R^2$ using numeric methods,
+\noindent However, when one does not have access to the data in order to run this model, simple summary statistiscs such as the point estimate for the `directlyharmed`  (0.097), its standard error (`0.023`) and the degress of freedom of the regression (`783`) are sufficient to compute the RV and partial $R^2$ using numeric methods, as in
 ```{r rv_num, results='hide'}
 robustness_value(t_statistic = 0.097/0.023, dof = 783)
 partial_r2(t_statistic = 0.097/0.023, dof = 783)
 ```
 
-The package `sensemakr` also provides a convenience function \code{sensitivity_stats()} that computes all sensitivity statistics for a regression coefficient of interest and returns them in a \code{data.frame}.
+The convenience function \code{sensitivity_stats()} also computes all sensitivity statistics for a regression coefficient of interest and returns them in a \code{data.frame}.
 
 ### Plotting functions
 
@@ -766,17 +766,17 @@ ovb_contour_plot(estimate = 0.097, se = 0.023, dof = 783,
                  sensitivity.of = "t-value")
 ```
 
-The extreme scenario plots (as in Figure \ref{fig:extreme}) can also be reproduced from summary statistics using the function `ovb_extreme_plot()`, <!--function it is also possible to reproduce Figure \ref{fig:extreme} with the summary statistics.!-->
+The extreme scenario plots (as in Figure \ref{fig:extreme}) can also be reproduced from summary statistics using the function `ovb_extreme_plot()`,
 
 ```{r extreme_numeric, eval = FALSE}
 ovb_extreme_plot(estimate = 0.097, se = 0.023, dof = 783)
 ```
 
-All plotting functions return invisibly the data needed to reproduce them, thereby allowing users that prefer to create their own plots to easily do so.
+All plotting functions return (invisibly) the data needed to reproduce them, allowing users to create their own plots if they prefer. 
 
 ### Adjusted estimates, standard errors and t-values 
 
-These functions allow users to compute the adjusted estimates given different postulated degrees of confounding. As before, they can be called directly with `lm` objects or numerical data. For instance, in the case of Darfur, suppose a researcher has reasons to believe a confounder explains 10% of the residual variance of the treatment and 20% of the residual variance of the outcome.  Without the underlying data, she can still compute the bias that a confounder with such strength could cause. Here we show how to obtain the adjusted estimate and t-value that one would have obtained in the full regression adjusting for such confounder.
+These functions allow users to compute the adjusted estimates given different postulated degrees of confounding. <!-- As before, they can be called directly with `lm` objects or numerical data. For instance, in the case of Darfur, suppose a researcher has reasons to believe a confounder explains 10% of the residual variance of the treatment and 20% of the residual variance of the outcome.!--> If the underlying data are not available, the investigator can still compute the bias that a confounder with such strength could cause. Here we show how to obtain the estimate and t-value that one would have obtained in the full regression adjusting for such confounder:
 
 ```{r adj_est_t}
 adjusted_estimate(estimate = 0.097, se = 0.023, dof = 783, 
@@ -786,8 +786,6 @@ adjusted_t(estimate = 0.097, se = 0.023, dof = 783,
 ```
 
 The computation shows that this confounder is not strong enough to bring the estimate to zero, but it is sufficient to bring the t-value below the usual 5% signifiance threshold of 1.96.
-
-<!-- CJH: by here I'm worried the reader will get really bored of all this. !-->
 
 ### Computing bounds from summary statistics
 
@@ -827,7 +825,7 @@ bounds <- ovb_partial_r2_bound(r2dxj.x = r2dxj.x,
                                bound_label = paste(1:3, "x", "female"))
 ```
 
-Finally, one uses the `adjusted_estimate()` function to compute the estimates implied by such hypothetical confounders.
+Finally, the `adjusted_estimate()` function computes the estimates implied by such hypothetical confounders.
 
 ```{r man_adju_est}
 bound.values <- adjusted_estimate(estimate = 0.0973,
@@ -838,7 +836,7 @@ bound.values <- adjusted_estimate(estimate = 0.0973,
 
 ```
 
-We can use all this information along with the numeric methods of the plot functions to reproduce the contour plots of Figure \ref{fig:darfur_contours} using only summary statistics usually found in regression tables. Note that, since we are performing all calculations manually, appropriate limits of the plot area also need to be set by the user.
+This information along with the numeric methods for the plot functions, allow us to reproduce the contour plots of Figure \ref{fig:darfur_contours} using only summary statistics. Note that, since we are performing all calculations manually, appropriate limits of the plot area also need to be set by the user.
 
 ```{r manual_contour_plot_bound, eval=FALSE}
 ovb_contour_plot(estimate = 0.0973, se = 0.0232, dof = 783, lim = 0.45)
