changes before moving to overleaf

--- a/vignettes/sensemakr.bib
+++ b/vignettes/sensemakr.bib
@@ -585,6 +585,17 @@
 	Volume = {29},
 	Year = {2011}}
 
+
+@article{hong:jebs2018,
+	Author = {Hong, Guanglei and Qin, Xu and Yang, Fan},
+	Journal = {Journal of Educational and Behavioral Statistics},
+	Number = {1},
+	Pages = {32--56},
+	Title = {Weighting-Based Sensitivity Analysis in Causal Mediation Studies},
+	Volume = {43},
+	Year = {2018}}
+
+
 @article{Sekhon2011,
 	Author = {Sekhon, Jasjeet S},
 	Date-Added = {2020-01-02 11:39:40 -0800},
