--- a/README.Rmd
+++ b/README.Rmd
@@ -78,9 +78,11 @@ model <- lm(peacefactor ~ directlyharmed + age + farmer_dar + herder_dar +
                          pastvoted + hhsize_darfur + female + village, data = darfur)
 
 # runs sensemakr for sensitivity analysis
-sensitivity <- sensemakr(model, treatment = "directlyharmed",
-                               benchmark_covariates = "female",
-                               kd = 1:3)
+sensitivity <- sensemakr(model = model, 
+                         treatment = "directlyharmed",
+                         benchmark_covariates = "female",
+                         kd = 1:3)
+
 # short description of results
 sensitivity
 
