--- a/README.Rmd
+++ b/README.Rmd
@@ -29,11 +29,11 @@ knitr::opts_chunk$set(
 
 # News
 
+- Check out the new [Stata version](https://github.com/resonance1/sensemakr-stata) of the package!
+
 - Check out the Robustness Value Shiny App at: https://carloscinelli.shinyapps.io/robustness_value/
 
 - Check out the [package website](http://carloscinelli.com/sensemakr/)!
-
-- A stata version of the packge is coming very soon.
 
 - Software paper coming soon.
 
